# NNGPUPerformaance

./: CMakeLists.txt  FFNNConfig.h  LICENSE  NNGPUPerformance.sln  NNGPUPerformance.vcxproj  README.md  TFPrediction.h  Timer.h  c-make-run.sh  main.cpp
data/: FFNNConfig.xml
data/FFNNData/: HW_HW.pb  HW_HW.pb.data.txt  HW_OW.pb  HW_OW.pb.data.txt  OW_OW.pb  OW_OW.pb.data.txt
